fix: style alignment bug for icons

--- a/documentation/demopages/nl-design-system/common/mixins/_typography.scss
+++ b/documentation/demopages/nl-design-system/common/mixins/_typography.scss
@@ -1,10 +1,6 @@
 @mixin typography {
   /* @TMP FIXES */
 
-  .rvo-layout-row {
-    align-items: flex-start;
-  }
-
   .rvo-progress-tracker {
     min-width: 268px;
   }
